# edge-compute

./: AGENTS.md  README.md
examples/: README.md  demo_wrapper.sh
examples/go/: Dockerfile  Makefile  README.md  app.go
examples/go/middleware-patterns/: README.md  demo.sh  func.toml  go.mod  handler.go
examples/js/: Dockerfile  Makefile  app.js
examples/js/mcp-server/: Dockerfile  README.md  demo.sh  func.toml  index.js  package.json
examples/js/webhook-receiver/: README.md  demo.sh  func.toml  index.js  package.json
examples/python/: Dockerfile  Makefile  README.md  app.py
examples/python/background-jobs/: README.md  demo.sh  func.toml  pyproject.toml
examples/python/background-jobs/function/: func.py
examples/python/data-processor/: README.md  demo.sh  func.toml  test
examples/python/data-processor/function/: func.py
examples/python/json-transformer/: README.md  demo.sh  func.py  func.toml  pyproject.toml
examples/python/json-transformer/function/: func.py
examples/python/jwt-auth/: README.md  demo.sh  func.toml  pyproject.toml
examples/python/jwt-auth/function/: func.py
examples/python/restful-api/: README.md  demo.sh  func.toml  pyproject.toml
examples/python/restful-api/function/: func.py
examples/python/webhook-receiver/: README.md  demo.sh  func.toml  pyproject.toml
examples/ts/: Dockerfile  Makefile  app.js
examples/ts/call-event-router/: README.md  demo.sh  func.toml  index.ts  package.json  tsconfig.json
examples/ts/mcp-server/: Dockerfile  README.md  demo.sh  func.toml  index.ts  package.json  tsconfig.json
(+1 files in other folders)
